[gd_scene load_steps=6 format=2]

[ext_resource path="res://ARTs/Bullet_art/Fire Bullet Pixel All.png" type="Texture" id=1]
[ext_resource path="res://Weapon/player_weapon/P_Weapon.gd" type="Script" id=2]
[ext_resource path="res://ARTs/Weapons/PikPng.com_top-down-png_3582649.png" type="Texture" id=3]
[ext_resource path="res://Bullet/2_Bullet.tscn" type="PackedScene" id=4]

[sub_resource type="Animation" id=6]
resource_name = "muzzle_flash"
length = 0.06
tracks/0/type = "value"
tracks/0/path = NodePath("../Weapon/MuzzleFlash:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.059515 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Weapon/MuzzleFlash:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.0599495 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.2, 0.5 ), Vector2( 0.2, 0.093 ) ]
}

[node name="Weapon" type="Node2D"]
script = ExtResource( 2 )
Bullet = ExtResource( 4 )
ammo = 30

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -2, 0 )
scale = Vector2( 0.172952, 0.172952 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( -2, -2, 266, 92 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../../AnimatedSprite")
anims/muzzle_flash = SubResource( 6 )

[node name="EndGun" type="Position2D" parent="."]
position = Vector2( 20, 3 )

[node name="GunDirection" type="Position2D" parent="."]
position = Vector2( 22, 3 )

[node name="AttackCooldown" type="Timer" parent="."]
wait_time = 0.119
one_shot = true

[node name="MuzzleFlash" type="Sprite" parent="."]
visible = false
position = Vector2( 20, 3 )
rotation = 3.14159
scale = Vector2( 0.201475, 0.503687 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 142, 78, 34, 19 )

[node name="reload" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[connection signal="timeout" from="reload" to="." method="_on_reload_timeout"]
